Se modifican los archivos de internacionalización: se añade la traducción en español

--- a/src/minicopier/i18n/minicopier.properties
+++ b/src/minicopier/i18n/minicopier.properties
@@ -88,9 +88,9 @@ Credits.Title=Credits
 Credits.Version=Version
 Credits.Credits.Homepage=MiniCopier Homepage:
 Credits.Credits.Development=Development:
-Credits.Credits.Developers=\tAdrian Courrèges
+Credits.Credits.Developers=\tAdrian Courr\u00e8ges and Boris P\u00e9rez
 Credits.Credits.LanguageTranslation=English Translation:
-Credits.Credits.LanguageContributors=\tAdrian Courrèges
+Credits.Credits.LanguageContributors=\tAdrian Courr\u00e8ges
 Credits.Credits.SendMail=For bug reports or suggestions, please send an email to:
 Credits.License.Title=License
 Credits.License.Intro=MiniCopier is free software released under the GNU General Public License (GPL).
@@ -107,3 +107,15 @@ Tooltip.Failed.Clear=Clear
 
 
 
+Credits.Copyrigth.To=Copyrigth (C) Boris P\u00e9rez
+Credits.License=This program is free software; you can redistribute it and/or modify " +
+				"it under the terms of the GNU General Public License as published by " +
+				"the Free Software Foundation; either version 2 of the License, or " +
+				" (at your option) any later version.\n\n" +
+				"This program is distributed in the hope that it will be useful, " +
+				"but WITHOUT ANY WARRANTY; without even the implied warranty of " +
+				"MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the " +
+				"GNU General Public License for more details.\n\n" +
+				"You should have received a copy of the GNU General Public License " +
+				"along with this program; see the file COPYING. If not, write to the " +
+				"Free Software Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA."
