--- a/src/minicopier/i18n/minicopier_es.properties
+++ b/src/minicopier/i18n/minicopier_es.properties
@@ -1,39 +1,39 @@
 MainFrame.title=MiniCopier
-MainFrame.paused=[Paused]
-MainFrame.SupPanel.BasketContent=contains:
+MainFrame.paused=[Pausado]
+MainFrame.SupPanel.BasketContent=contiene:
 MainFrame.SupPanel.TotalBarTitle=Total
-MainFrame.SupPanel.CurrentFileBarTitle=Current File
-MainFrame.SupPanel.PauseButton=Pause
-MainFrame.SupPanel.ResumeButton=Resume
-MainFrame.SupPanel.SkipButton=Skip
-MainFrame.SupPanel.CancelButton=Cancel
-MainFrame.SupPanel.SourcePath=From:
-MainFrame.SupPanel.DestinationPath=To:
+MainFrame.SupPanel.CurrentFileBarTitle=Archivo actual
+MainFrame.SupPanel.PauseButton=Pausar
+MainFrame.SupPanel.ResumeButton=Proseguir
+MainFrame.SupPanel.SkipButton=Escapar
+MainFrame.SupPanel.CancelButton=Cancelar
+MainFrame.SupPanel.SourcePath=Desde:
+MainFrame.SupPanel.DestinationPath=Hacia:
 
-MainFrame.TransfersPane.title=Transfers List
-MainFrame.TransfersPane.sourceRow=Source
-MainFrame.TransfersPane.sizeRow=Size
-MainFrame.TransfersPane.destinationRow=Destination
+MainFrame.TransfersPane.title=Lista de Transferencias
+MainFrame.TransfersPane.sourceRow=Fuente
+MainFrame.TransfersPane.sizeRow=Tama\u00f1o
+MainFrame.TransfersPane.destinationRow=Destino
 
-MainFrame.FailedPane.title=Failed Items
+MainFrame.FailedPane.title=Fallidos
 
-MainFrame.OptionsPane.title=Options
-MainFrame.OptionsPane.collision.Title=Collision action
-MainFrame.OptionsPane.collision.Sentence=If target file already exists, always:
-MainFrame.OptionsPane.collision.Ask=ask
-MainFrame.OptionsPane.collision.Cancel=cancel copy
-MainFrame.OptionsPane.collision.Overwrite=overwrite
-MainFrame.OptionsPane.collision.OverwriteOld=overwrite if older
-MainFrame.OptionsPane.collision.Resume=resume
+MainFrame.OptionsPane.title=Opciones
+MainFrame.OptionsPane.collision.Title=Acci\u00f3n si colisi\u00f3n
+MainFrame.OptionsPane.collision.Sentence=Si el archivo ya existe, entonces:
+MainFrame.OptionsPane.collision.Ask=Preguntar
+MainFrame.OptionsPane.collision.Cancel=Cancelar copia
+MainFrame.OptionsPane.collision.Overwrite=Sobreescribir
+MainFrame.OptionsPane.collision.OverwriteOld=Sobreescribir si m\u00e1s viejo.
+MainFrame.OptionsPane.collision.Resume=proseguir
 
-MainFrame.OptionsPane.throughput.Title=Transfer Speed
-MainFrame.OptionsPane.throughput.Sentence=Limit transfer speed to: 
+MainFrame.OptionsPane.throughput.Title=Velocidad de Transferencia
+MainFrame.OptionsPane.throughput.Sentence=Limitar velocidad de transferencia a: 
 
-MainFrame.OptionsPane.symLinks.Title=Symbolic links (Unix systems)
-MainFrame.OptionsPane.symLinks.Sentence=If source path contains a link, always:
-MainFrame.OptionsPane.symLinks.Follow=follow it
-MainFrame.OptionsPane.symLinks.Ignore=ignore it
-MainFrame.OptionsPane.creditsButton=About
+MainFrame.OptionsPane.symLinks.Title=Enlaces simb\u00f3licos (Sistemas Unix)
+MainFrame.OptionsPane.symLinks.Sentence=Si la fuente contiene un enlace, entonces:
+MainFrame.OptionsPane.symLinks.Follow=Seguirlo
+MainFrame.OptionsPane.symLinks.Ignore=Ignorarlo
+MainFrame.OptionsPane.creditsButton=Acerca
 
 DialogMsg.byte=B
 DialogMsg.kilobyte=kB
@@ -46,64 +46,65 @@ DialogMsg.megabyteps=MB/s
 DialogMsg.gigabyteps=GB/s
 DialogMsg.terabyteps=TB/s
 
-DialogMsg.displayBasketInstructions.Title=Basket Management
-DialogMsg.displayBasketInstructions.EmptyText=Your basket is empty!\n\nPlease drag and drop some files or folders here to fill your basket.\nWhen you want to paste, drag and drop a folder on the other icon.
-DialogMsg.displayBasketInstructions.FullText=Your basket is not empty.\nDo you wish to clear it?
-DialogMsg.displayBasketInstructions.ClearButton=Clear basket
-DialogMsg.displayBasketInstructions.CancelButton=Cancel
+DialogMsg.displayBasketInstructions.Title=Administrar cesta.
+DialogMsg.displayBasketInstructions.EmptyText=La cesta est\u00e1 vac\u00eda!\n\nPor favor arrastre y suelte algunos archivos o carpetas en la cesta.\nLuego arrastre y suelte la carpeta destino  hacia el otro \u00edcono.
+DialogMsg.displayBasketInstructions.FullText=Su cesta no est\u00e1 vac\u00eda.\nDesea limpiarla?
+DialogMsg.displayBasketInstructions.ClearButton=Limpiar cesta
+DialogMsg.displayBasketInstructions.CancelButton=Cancelar
 
-DialogMsg.confirmSkip.Title=Skip current file
-DialogMsg.confirmSkip.Text=Do you want to put current file transfer in the\nend of queue, so MiniCopier can resume it later?\n\nSelecting 'No' will cancel this transfer, but not\nerase the already copied part. 
-DialogMsg.confirmSkip.QueueButton=Yes, put in queue
-DialogMsg.confirmSkip.NoButton=No, give up
-DialogMsg.confirmSkip.CancelButton=Cancel
+DialogMsg.confirmSkip.Title=Ignorar archivo actual
+DialogMsg.confirmSkip.Text=Desea poner la actual transferencia al final de la lista\npara continuarla m\u00e1s tarde?\n\nSeleccionando 'No' cancelar\u00e1 esta copia, pero no\neliminar\u00e1 la parte del archivo ya procesada. 
+DialogMsg.confirmSkip.QueueButton=Si, poner en espera.
+DialogMsg.confirmSkip.NoButton=No, avanzar.
+DialogMsg.confirmSkip.CancelButton=Cancelar
 
-DialogMsg.askNewName.Text=Please, enter a new name for the target file:\n
+DialogMsg.askNewName.Text=Por favor, introduzca el nombre nuevo:\n
 
-DialogMsg.renameError.Title=Incorrect name
-DialogMsg.renameError.Text=This name cannot be used!\nPlease, enter a different one.
+DialogMsg.renameError.Title=Nombre incorrecto.
+DialogMsg.renameError.Text=Este nombre ya est\u00e1 en uso, entre otro diferente.\n
 
-DialogMsg.errorOverwrite.Title=Overwrite error
-DialogMsg.errorOverwrite.Text=Cannot overwrite!\nSource and target files are the same. 
+DialogMsg.errorOverwrite.Title=Error de sobreescritura
+DialogMsg.errorOverwrite.Text=No se puede sobreescribir!\nFuente y destino coinciden.\n
 
-DialogMsg.alreadyExistsChoice.Title=File already exists
-DialogMsg.alreadyExistsChoice.Text1=The target file already exists.\n\n
-DialogMsg.alreadyExistsChoice.Source=Source
-DialogMsg.alreadyExistsChoice.Target=\nTarget
-DialogMsg.alreadyExistsChoice.Text2=What do you want to do?
-DialogMsg.alreadyExistsChoice.OverwriteButton=Overwrite
-DialogMsg.alreadyExistsChoice.ResumeButton=Resume
-DialogMsg.alreadyExistsChoice.RenameButton=Rename
-DialogMsg.alreadyExistsChoice.CancelButton=Cancel
+DialogMsg.alreadyExistsChoice.Title=Ya existe ese archivo
+DialogMsg.alreadyExistsChoice.Text1=El archivo destino ya existe.\n\n
+DialogMsg.alreadyExistsChoice.Source=Origen
+DialogMsg.alreadyExistsChoice.Target=\nDestino
+DialogMsg.alreadyExistsChoice.Text2=Qu\u00e9 desea hacer?
+DialogMsg.alreadyExistsChoice.OverwriteButton=Sobreescribir
+DialogMsg.alreadyExistsChoice.ResumeButton=Continuar
+DialogMsg.alreadyExistsChoice.RenameButton=Renombrar
+DialogMsg.alreadyExistsChoice.CancelButton=Cancelar
 
-DialogMsg.transferErrorChoice.Title=Transfer error
-DialogMsg.transferErrorChoice.Text=An error occurred during transfer!\n\nPossible causes:\n- disk is full\n- you don't have read/write permission\n\nYou can put this copy in queue, so MiniCopier\nwill try to resume later.
-DialogMsg.transferErrorChoice.QueueButton=Put in queue
-DialogMsg.transferErrorChoice.AbortButton=Give up file
+DialogMsg.transferErrorChoice.Title=Error de transferencia
+DialogMsg.transferErrorChoice.Text=Ha ocurrido un error!\n\nCausas posibles!\n- el disco est\u00e1 lleno\n- no tienes privilegios\n\nPuedes poner esta copia al final de la lista.\nMinicopier intentar\u00e1 copiarlo m\u00e1s tarde.\n
+DialogMsg.transferErrorChoice.QueueButton=Poner en espera
+DialogMsg.transferErrorChoice.AbortButton=Omitir archivo
 
-DialogMsg.welcome.Title=Welcome to MiniCopier!
-DialogMsg.welcome.Text=It seems you are using MiniCopier for the first time.\n\nDrag and drop some files you want to copy into the basket and \ndrop a destination folder on the right to launch the process. 
+DialogMsg.welcome.Title=Bienvenido a Minicopier
+DialogMsg.welcome.Text=Parece que est\u00e1s usando Minicopier por primera vez\n Arrastra hacia la cesta roja y suelta all\u00ed los archivos que quieras\ncopiar y luego haz lo mismo con la carpeta destino en el \u00edcono\n de la derecha para iniciar el proceso.
 
-Credits.Title=Credits
-Credits.Version=Version
-Credits.Credits.Homepage=MiniCopier Homepage:
-Credits.Credits.Development=Development:
-Credits.Credits.Developers=\tAdrian Courrèges
-Credits.Credits.LanguageTranslation=English Translation:
-Credits.Credits.LanguageContributors=\tAdrian Courrèges
-Credits.Credits.SendMail=For bug reports or suggestions, please send an email to:
-Credits.License.Title=License
-Credits.License.Intro=MiniCopier is free software released under the GNU General Public License (GPL).
+Credits.Title=Creditos
+Credits.Version=Versi\u00f3n
+Credits.Credits.Homepage=Web de MiniCopier:
+Credits.Credits.Development=Desarrollo:
+Credits.Credits.Developers=\tAdrian Courr\u00e8ges y Boris P\u00e9rez
+Credits.Credits.LanguageTranslation=Traducci\u00f3n al espa\u00f1ol:
+Credits.Credits.LanguageContributors=Boris P\u00e9rez
+Credits.Credits.SendMail=Para reporte de fallos o sugerencias, env\u00ede un email a:
+Credits.License.Title=Licencia
+Credits.License.Intro=MiniCopier es Software Libre, liberado bajo la  GNU General Public License (GPL).
 
-Tooltip.Basket=Drag and drop files you wish to copy here.
-Tooltip.Paste=Drag and drop a folder here to paste the basket content.
-Tooltip.Transfers.First=First
-Tooltip.Transfers.Up=Up
-Tooltip.Transfers.Down=Down
-Tooltip.Transfers.Last=Last
-Tooltip.Transfers.Cancel=Cancel
-Tooltip.Failed.Retry=Retry transfer
-Tooltip.Failed.Clear=Clear
+Tooltip.Basket=Arrastre y suelte aqu\u00ed los archivos que quiere copiar.
+Tooltip.Paste=Arrastre y suelte aqu\u00ed la carpeta hacia la que quiere copiar.
+Tooltip.Transfers.First=Primero
+Tooltip.Transfers.Up=Arriba
+Tooltip.Transfers.Down=Abajo
+Tooltip.Transfers.Last=\u00daltimo
+Tooltip.Transfers.Cancel=Cancelar
+Tooltip.Failed.Retry=Reintentar copia
+Tooltip.Failed.Clear=Limpiar
 
 
 
+Credits.License=This program is free software; you can redistribute it and/or modify " +
