Pequeñas modificaciones en traducción

--- a/src/minicopier/i18n/minicopier_es.properties
+++ b/src/minicopier/i18n/minicopier_es.properties
@@ -5,7 +5,7 @@ MainFrame.SupPanel.TotalBarTitle=Total
 MainFrame.SupPanel.CurrentFileBarTitle=Archivo actual
 MainFrame.SupPanel.PauseButton=Pausar
 MainFrame.SupPanel.ResumeButton=Proseguir
-MainFrame.SupPanel.SkipButton=Escapar
+MainFrame.SupPanel.SkipButton=Omitir
 MainFrame.SupPanel.CancelButton=Cancelar
 MainFrame.SupPanel.SourcePath=Desde:
 MainFrame.SupPanel.DestinationPath=Hacia:
